--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+argon2 = "0.5.3"
 chrono = "0.4.41"
-rocket = { version = "0.5.1", features = ["json"] }
+jsonwebtoken = "9.3.1"
+rocket = { version = "0.5.1", features = ["json", "secrets"] }
 serde = "1.0.219"
 serde_json = "1.0.140"
 sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio-native-tls", "sqlite"] }
+time = "0.3.41"
 tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
