--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 argon2 = "0.5.3"
 chrono = "0.4.41"
 jsonwebtoken = "9.3.1"
+rand = "0.8"
 rocket = { version = "0.5.1", features = ["json", "secrets"] }
 serde = "1.0.219"
 serde_json = "1.0.140"
